# ha-voice-label-sync

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PRODUCT.md  README.md  ROADMAP.md  SUPPORTED_BACKENDS.md  WORKFLOW.md  hacs.json  pyproject.toml
.github/workflows/: hassfest.yaml  package-check.yml  publish-pypi.yml  publish-testpypi.yml  python-check.yml  validate-hacs.yml
custom_components/ha_voice_label_sync/: __init__.py  button.py  config_flow.py  const.py  manifest.json  services.py  services.yaml  strings.json  websocket.py
custom_components/ha_voice_label_sync/frontend/: hvls-preview-panel.js
custom_components/ha_voice_label_sync/translations/: fr.json
examples/: configuration.yaml
scripts/: ga_label_sync.py
src/hvls/: __init__.py  cli.py  engine.py  models.py  orchestrator.py  registry.py
src/hvls/backends/: __init__.py  google.py
src/hvls/writers/: __init__.py  filesystem.py
